Start converting to catnip v2