@@ -4,16 +4,17 @@ import com.esotericsoftware.reflectasm.MethodAccess;
 import com.mewna.catnip.entity.message.Message;
 import com.mewna.catnip.extension.AbstractExtension;
 import com.mewna.catnip.shard.DiscordEvent;
-import com.mewna.catnip.util.SafeVertxCompletableFuture;
 import com.mewna.yangmal.context.Arg;
 import com.mewna.yangmal.context.Context;
 import com.mewna.yangmal.context.EditableContext;
 import com.mewna.yangmal.context.YangmalContext;
-import com.mewna.yangmal.function.*;
+import com.mewna.yangmal.function.TriFunction;
 import com.mewna.yangmal.util.Result;
 import io.github.classgraph.ClassGraph;
 import io.github.classgraph.ClassInfo;
 import io.github.classgraph.ScanResult;
+import io.reactivex.Completable;
+import io.reactivex.Single;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -23,7 +24,9 @@ import java.lang.reflect.Modifier;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 /**
@@ -35,17 +38,17 @@ public final class Yangmal extends AbstractExtension {
     private final Logger logger = LoggerFactory.getLogger(getClass());
     
     private final Map<String, CommandContainer> commands = new HashMap<>();
-    private final Map<Class<?>, AsyncBiFunction<Context, Arg, ? extends Result<?, Throwable>>> typeConverters = new ConcurrentHashMap<>();
+    private final Map<Class<?>, BiFunction<Context, Arg, Single<? extends Result<?, Throwable>>>> typeConverters = new ConcurrentHashMap<>();
     private final Map<Class<?>, Optional<?>> contextServices = new ConcurrentHashMap<>();
     
-    private final Collection<AsyncBiConsumer<EditableContext, Message>> contextHooks = new ArrayList<>();
-    private final Collection<AsyncBiPredicate<Context, Message>> commandChecks = new ArrayList<>();
+    private final Collection<BiFunction<EditableContext, Message, Single<Boolean>>> contextHooks = new ArrayList<>();
+    private final Collection<BiFunction<Context, Message, Single<Boolean>>> commandChecks = new ArrayList<>();
     
     private Consumer<Throwable> errorHandler = e -> logger.warn("Encountered error during command processing:", e);
-    private AsyncSupplier<Message, List<String>> prefixSupplier = __ -> CompletableFuture.completedFuture(Collections.singletonList("!"));
-    private AsyncBiConsumer<String, Context> invalidCommandHandler = (__, ___) -> CompletableFuture.completedFuture(null);
-    private AsyncConsumer<Message> notCommandHandler = __ -> CompletableFuture.completedFuture(null);
-    private AsyncTriConsumer<Message, String, Context> checksFailedHandler = (__, ___, ____) -> CompletableFuture.completedFuture(null);
+    private Function<Message, Single<List<String>>> prefixSupplier = __ -> Single.fromFuture(CompletableFuture.completedFuture(List.of("!")));
+    private BiFunction<String, Context, Completable> invalidCommandHandler = (__, ___) -> Completable.complete();
+    private Function<Message, Completable> notCommandHandler = __ -> Completable.complete();
+    private TriFunction<Message, String, Context, Completable> checksFailedHandler = (__, ___, ____) -> Completable.complete();
     private Consumer<Runnable> commandRunner = Runnable::run;
     
     public Yangmal() {
@@ -62,26 +65,27 @@ public final class Yangmal extends AbstractExtension {
     }
     
     @Override
-    public void start() {
+    public Completable onLoaded() {
         catnip().on(DiscordEvent.MESSAGE_CREATE, this::runCommand);
+        return Completable.complete();
     }
     
     @Nonnull
-    public Yangmal addContextHook(@Nonnull final AsyncBiConsumer<EditableContext, Message> hook) {
+    public Yangmal addContextHook(@Nonnull final BiFunction<EditableContext, Message, Single<Boolean>> hook) {
         contextHooks.add(hook);
         return this;
     }
     
     @Nonnull
-    public Yangmal addCommandCheck(@Nonnull final AsyncBiPredicate<Context, Message> check) {
+    public Yangmal addCommandCheck(@Nonnull final BiFunction<Context, Message, Single<Boolean>> check) {
         commandChecks.add(check);
         return this;
     }
     
     @Nonnull
     public <T> Yangmal registerTypeConverter(@Nonnull final Class<T> type,
-                                             @Nonnull final AsyncBiFunction<Context, Arg,
-                                                     ? extends Result<?, Throwable>> converter) {
+                                             @Nonnull final BiFunction<Context, Arg,
+                                                     Single<? extends Result<?, Throwable>>> converter) {
         typeConverters.put(type, converter);
         return this;
     }
@@ -99,31 +103,31 @@ public final class Yangmal extends AbstractExtension {
     }
     
     @Nonnull
-    public Yangmal prefixSupplier(@Nonnull final AsyncSupplier<Message, List<String>> supplier) {
+    public Yangmal prefixSupplier(@Nonnull final Function<Message, Single<List<String>>> supplier) {
         prefixSupplier = supplier;
         return this;
     }
     
     @Nonnull
     public Yangmal constantPrefix(@Nonnull final String prefix) {
-        prefixSupplier = AsyncSupplier.constant(Collections.singletonList(prefix));
+        prefixSupplier = __ -> Single.fromFuture(CompletableFuture.completedFuture(List.of("!")));
         return this;
     }
     
     @Nonnull
-    public Yangmal invalidCommandHandler(@Nonnull final AsyncBiConsumer<String, Context> handler) {
+    public Yangmal invalidCommandHandler(@Nonnull final BiFunction<String, Context, Completable> handler) {
         invalidCommandHandler = handler;
         return this;
     }
     
     @Nonnull
-    public Yangmal notCommandHandler(@Nonnull final AsyncConsumer<Message> handler) {
+    public Yangmal notCommandHandler(@Nonnull final Function<Message, Completable> handler) {
         notCommandHandler = handler;
         return this;
     }
     
     @Nonnull
-    public Yangmal checksFailedHandler(@Nonnull final AsyncTriConsumer<Message, String, Context> handler) {
+    public Yangmal checksFailedHandler(@Nonnull final TriFunction<Message, String, Context, Completable> handler) {
         checksFailedHandler = handler;
         return this;
     }
@@ -135,82 +139,86 @@ public final class Yangmal extends AbstractExtension {
     }
     
     @Nonnull
-    public Map<Class<?>, AsyncBiFunction<Context, Arg, ? extends Result<?, Throwable>>> typeConverters() {
+    public Map<Class<?>, BiFunction<Context, Arg, Single<? extends Result<?, Throwable>>>> typeConverters() {
         return typeConverters;
     }
     
-    @SuppressWarnings("WeakerAccess")
+    @SuppressWarnings({"WeakerAccess", "ResultOfMethodCallIgnored"})
     public void runCommand(@Nonnull final Message source) {
-        prefixSupplier.supply(source).thenAccept(prefixes -> {
-            // Test for prefixes
-            String prefix = null;
-            for(final String s : prefixes) {
-                if(source.content().startsWith(s)) {
-                    prefix = s;
-                    break;
-                }
-            }
-            if(prefix != null) {
-                // Have a valid command, process hooks
-                final YangmalContext ctx = new YangmalContext();
-                ctx.startAcceptingParams();
-                // Have to do a copy to make it effectively final :K
-                final String argstr = source.content().substring(prefix.length());
-                if(!argstr.isEmpty()) {
-                    // If the argstr isn't empty after removing the prefix, then we must have at least a name
-                    final String finalPrefix = prefix;
-                    SafeVertxCompletableFuture.allOf(catnip(), contextHooks.stream().map(e -> e.consume(ctx, source)).toArray(CompletableFuture[]::new))
-                            .thenAccept(__ -> {
-                                ctx.stopAcceptingParams();
-                                ctx.startPopulating();
-                                ctx.services(contextServices);
-                                
-                                // Populate prefix, args, ...
-                                ctx.prefix(finalPrefix);
-                                
-                                final var nameArgSplit = argstr.split("\\s+", 2);
-                                final var name = nameArgSplit[0];
-                                ctx.name(name);
-                                if(nameArgSplit.length > 1) {
-                                    ctx.argstr(nameArgSplit[1]);
-                                    ctx.args(Arrays.stream(nameArgSplit[1].split("\\s+", 2))
-                                            .map(e -> Arg.create(this, ctx, e))
-                                            .collect(Collectors.toList()));
-                                } else {
-                                    ctx.argstr(null);
-                                    ctx.args(Collections.emptyList());
-                                }
-                                
-                                ctx.stopPopulating();
-                                
-                                // Check if we can run the command
-                                final List<CompletableFuture<Boolean>> checkFutures = commandChecks.stream()
-                                        .map(e -> e.test(ctx, source)).collect(Collectors.toList());
-                                SafeVertxCompletableFuture.allOf(catnip(), checkFutures.toArray(new CompletableFuture[0])).thenAccept(___ -> {
-                                    if(checkFutures.stream().allMatch(e -> e.getNow(false))) {
-                                        // All checks passed, execute!
-                                        commandRunner.accept(() -> Optional.ofNullable(commands.get(ctx.name()))
-                                                .ifPresentOrElse(cmd -> cmd.invoke(ctx),
-                                                        () -> invalidCommandHandler.consume(ctx.name(), ctx)));
-                                    } else {
-                                        // Warn that checks failed
-                                        checksFailedHandler.consume(source, ctx.name(), ctx);
-                                    }
-                                });
-                            })
-                            .exceptionally(e -> {
-                                errorHandler.accept(e);
-                                return null;
-                            });
-                } else {
-                    // Not a command (nothing after prefix)
-                    notCommandHandler.consume(source);
-                }
-            } else {
-                // Not a command (no prefix)
-                notCommandHandler.consume(source);
-            }
-        });
+        prefixSupplier.apply(source).subscribeOn(catnip().rxScheduler()).observeOn(catnip().rxScheduler())
+                .subscribe(prefixes -> {
+                    // Test for prefixes
+                    String prefix = null;
+                    for(final String s : prefixes) {
+                        if(source.content().startsWith(s)) {
+                            prefix = s;
+                            break;
+                        }
+                    }
+                    if(prefix != null) {
+                        // Have a valid command, process hooks
+                        final YangmalContext ctx = new YangmalContext();
+                        ctx.startAcceptingParams();
+                        // Have to do a copy to make it effectively final :K
+                        final String argstr = source.content().substring(prefix.length());
+                        if(!argstr.isEmpty()) {
+                            // If the argstr isn't empty after removing the prefix, then we must have at least a name
+                            final String finalPrefix = prefix;
+                            
+                            Single.zip(contextHooks.stream().map(f -> f.apply(ctx, source))
+                                            .collect(Collectors.toUnmodifiableList()),
+                                    data -> Arrays.stream(data).allMatch(e -> e == Boolean.TRUE))
+                                    .doOnSuccess(res -> {
+                                        ctx.stopAcceptingParams();
+                                        ctx.startPopulating();
+                                        ctx.services(contextServices);
+                                        
+                                        // Populate prefix, args, ...
+                                        ctx.prefix(finalPrefix);
+                                        
+                                        final var nameArgSplit = argstr.split("\\s+", 2);
+                                        final var name = nameArgSplit[0];
+                                        ctx.name(name);
+                                        if(nameArgSplit.length > 1) {
+                                            ctx.argstr(nameArgSplit[1]);
+                                            ctx.args(Arrays.stream(nameArgSplit[1].split("\\s+", 2))
+                                                    .map(e -> Arg.create(this, ctx, e))
+                                                    .collect(Collectors.toList()));
+                                        } else {
+                                            ctx.argstr(null);
+                                            ctx.args(Collections.emptyList());
+                                        }
+                                        
+                                        ctx.stopPopulating();
+                                        
+                                        // Check if the command can even be run
+                                        Single.zip(commandChecks.stream().map(f -> f.apply(ctx, source))
+                                                        .collect(Collectors.toUnmodifiableList()),
+                                                data -> Arrays.stream(data).allMatch(e -> e == Boolean.TRUE))
+                                                .doOnSuccess(res2 -> {
+                                                    if(res2) {
+                                                        commandRunner.accept(() -> Optional.ofNullable(commands.get(ctx.name()))
+                                                                .ifPresentOrElse(cmd -> cmd.invoke(ctx),
+                                                                        () -> invalidCommandHandler.apply(ctx.name(), ctx)));
+                                                    } else {
+                                                        checksFailedHandler.consume(source, ctx.name(), ctx);
+                                                    }
+                                                })
+                                                .doOnError(e -> errorHandler.accept(e));
+                                    })
+                                    .doOnError(e -> errorHandler.accept(e))
+                                    .subscribeOn(catnip().rxScheduler())
+                                    .observeOn(catnip().rxScheduler())
+                                    .subscribe();
+                        } else {
+                            // Not a command (nothing after prefix)
+                            notCommandHandler.apply(source);
+                        }
+                    } else {
+                        // Not a command (no prefix)
+                        notCommandHandler.apply(source);
+                    }
+                }, e -> errorHandler.accept(e));
     }
     
     private void loadCommandsFromClass(@Nonnull final Class<?> cls) {
